# py-soupx

./: .gitignore  README.md  pyproject.toml
data/: pbmc_toy_soupx.h5ad
examples/: benchmark.py  compare_R_vs_Python.executed.ipynb  compare_R_vs_Python.ipynb  r_driver_soupx.R  tutorial_standalone.py
pysoupx/: __init__.py  adjust.py  contamination.py  estimate.py  io.py  plotting.py  soupchannel.py
tests/: conftest.py  make_synthetic.py  r_reference_driver.R  test_r_parity.py  test_smoke.py
